# envi-tools

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  csvtools.cpp  csvtools.hpp  main.cpp  parseENVIhdr.py  randomPointGenerator.cpp  replace_data.sh  results.csv
apps/: CMakeLists.txt
apps/src/: CalculateContrast.cpp  Convert.cpp  ConvertDir.cpp  ENVIInfo.cpp  ExtractENVI.cpp  MakeRGB.cpp  MakeRGBHDR.cpp  RandomPointGen.cpp  ReadENVI.cpp  TIFFConvert.cpp  contrast.cpp  convert.cpp  randomPointGenerator.cpp
cmake/: Config.cmake.in  Constants.cmake  FindDependencies.cmake  Install.cmake
doc/: CMakeLists.txt  CONTRIBUTORS.md  Doxyfile.in  Modules.dox
envi-tools/: CMakeLists.txt
envi-tools/include/envi-tools/: CSVIO.hpp  ENVI.hpp
envi-tools/include/envitools/: Box.hpp  CSVIO.hpp  ContrastMetrics.hpp  ENVI.hpp  EnviUtils.hpp  FlatfieldCorrection.hpp  TIFFIO.hpp
envi-tools/include/module1/: ExampleClass.hpp
envi-tools/src/: CSVIO.cpp  ContrastMetrics.cpp  ENVI.cpp  ExampleClass.cpp  TIFFIO.cpp
graphics/ai/: ENVI-interleave.ai
graphics/eps/: ENVI-BIL.eps  ENVI-BIP.eps  ENVI-BSQ.eps
scripts/: InstallOpenCV.sh  parseENVIhdr.py
